--- a/CONDA-ENVS/env3.yml
+++ b/CONDA-ENVS/env3.yml
@@ -1,6 +1,6 @@
-name: anvio-7
+name: env3
 channels:
-  - au-eoed
+  - biobakery
   - conda-forge
   - bioconda
   - defaults
@@ -19,10 +19,10 @@ dependencies:
   - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.11.0=h470a237_1
-  - ca-certificates=2020.12.5=ha878542_0
+  - ca-certificates=2021.5.30=ha878542_0
   - cairo=1.14.12=h8948797_3
   - centrifuge=1.0.4_beta=py36pl526he941832_2
-  - certifi=2020.12.5=py36h5fab9bb_0
+  - certifi=2021.5.30=py36h5fab9bb_0
   - curl=7.71.1=he644dc0_8
   - diamond=0.9.14=h8b12597_3
   - entrez-direct=13.9=pl526h375a9b1_0
@@ -45,7 +45,7 @@ dependencies:
   - h5py=2.8.0=py36h31fdc65_1005
   - harfbuzz=2.4.0=hca77d97_0
   - hdf5=1.10.4=nompi_h3c11f04_1106
-  - hmmer=3.3=he1b5a44_1
+  - hmmer=3.2.1=he1b5a44_2
   - icu=58.2=hf484d3e_1000
   - infernal=1.1.3=h516909a_0
   - iqtree=2.0.3=h176a8bc_1
@@ -56,6 +56,7 @@ dependencies:
   - libblas=3.9.0=6_openblas
   - libcblas=3.9.0=6_openblas
   - libcurl=7.71.1=hcdd3856_8
+  - libdeflate=1.6=h516909a_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libffi=3.3=h58526e2_2
@@ -84,11 +85,11 @@ dependencies:
   - make=4.3=hd18ef5c_1
   - mcl=14.137=pl526h516909a_5
   - megahit=1.2.9=h8b12597_0
-  - muscle=3.8.1551=hc9558a2_5
+  - muscle=3.8.1551=h7d875b9_6
   - ncurses=6.2=h58526e2_4
   - numpy=1.19.4=py36h2aa4a07_2
   - openmp=8.0.1=0
-  - openssl=1.1.1i=h7f98852_0
+  - openssl=1.1.1k=h7f98852_0
   - pandoc=2.11.3.2=h7f98852_0
   - pango=1.45.3=hd140c19_0
   - pcre=8.44=he1b5a44_0
@@ -160,8 +161,11 @@ dependencies:
   - pip=20.3.3=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
   - prodigal=2.6.3=h516909a_2
+  - psutil=5.4.3=py36_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - pysam=0.16.0.1=py36h4c34d4e_1
   - python=3.6.12=hffdb5ce_0_cpython
+  - python-levenshtein=0.12.2=py36h8f6f2f9_0
   - python_abi=3.6=1_cp36m
   - r-askpass=1.1=r36hcdcec82_2
   - r-assertthat=0.2.1=r36h6115d3f_2
@@ -292,3 +296,7 @@ dependencies:
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1010
   - zstd=1.4.8=ha95c52a_1
+  - pip:
+    - mistune==0.8.4
+prefix: /home1/joshuakl/.conda/envs/new_anvio-7
+
